feat: Implement tabbar yourself
自己实现一个tabbar，不再使用colorUI的tabbar

--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
     <title></title>
     <!--preload-links-->
     <!--app-context-->
+    <style>
+      ::-webkit-scrollbar {
+        display: none;
+      }
+    </style>
   </head>
   <body>
     <div id="app"><!--app-html--></div>
